--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>To-Do-List</title>
+     <link rel = "icon" href = 
+"https://assets.dryicons.com/uploads/icon/svg/6148/d6ad548f-5ea6-4a1f-aeb3-f0980a824d1f.svg" 
+        type = "svg/x-icon">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
