--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -26,8 +26,8 @@
     -->
     <title>To-Do-List</title>
      <link rel = "icon" href = 
-"https://assets.dryicons.com/uploads/icon/svg/6148/d6ad548f-5ea6-4a1f-aeb3-f0980a824d1f.svg" 
-        type = "svg/x-icon">
+"https://pics.freeicons.io/uploads/icons/png/1198703521579156625-512.png" 
+        type = "image/x-icon">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
