--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     -->
     <title>To-Do-List</title>
      <link rel = "icon" href = 
-"https://pics.freeicons.io/uploads/icons/png/1198703521579156625-512.png" 
-        type = "image/x-icon">
+"https://assets.dryicons.com/uploads/icon/svg/6150/c40a9e1f-308b-48f1-b49e-14ef0e05af70.svg" 
+        type = "svg/x-icon">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
